# a7_openapi.yaml
@@ -225,8 +225,6 @@ paths:
                 302Failure:
                   description: 'Failed profile edition. Redirect to edit profile form.'
                   value: '/user/{id}/edit'
-        '404':
-          description: 'User not found'
 
   # User deletion is hidden behind /api to prevent accidents
   /api/user/{id}:
@@ -308,9 +306,6 @@ paths:
               properties:
                 reason:
                   type: string
-                reported_at:
-                  type: string
-                  format: date
               required:
                 - reason
 
